Added Eclipse installation explained